--- a/README.html
+++ b/README.html
@@ -411,7 +411,7 @@ code {
 </head>
 
 <body>
-    <h1 id="visual-stuido-code-extention---proeditor">Visual Stuido Code Extention - PRO/Editor</h1>
+    <h1 id="proeditor---visual-studio-code-extension">PRO/Editor - Visual Studio Code Extension</h1>
 <h2 id="description">Description</h2>
 <h2 id="software-version-compatibility">Software Version Compatibility</h2>
 <p>The language visualization formatters support Creo Parametric up to v8.0.3.0</p>
