--- a/README.html
+++ b/README.html
@@ -418,17 +418,17 @@ code {
 <h2 id="usage">Usage</h2>
 <h3 id="pro-editor">pro-editor</h3>
 <p>Provides syntax highlighting for configuration files, config.(pro|sup), used by Creo Parametric.</p>
-<h3 id="pro-program-editor">pro-program-editor</h3>
-<p>Provides syntax highlighting for PRO/Program used in Creo Parametric.</p>
-<h3 id="pro-relations-editor">pro-relations-editor</h3>
+<h3 id="pro-relations">pro-relations</h3>
 <p>Provides syntax highlighting for PRO/Relations used in Creo Parametric.</p>
-<h3 id="pro-modchk-editor">pro-modchk-editor</h3>
+<h3 id="pro-program-under-development">pro-program (Under Development)</h3>
+<p>Provides syntax highlighting for PRO/Program used in Creo Parametric.</p>
+<h3 id="pro-modchk-under-development">pro-modchk  (Under Development)</h3>
 <p>Provides syntax highlighting for MODELCheck used by Creo Parametric.</p>
-<h3 id="pro-psf-editor">pro-psf-editor</h3>
+<h3 id="pro-psf-under-development">pro-psf  (Under Development)</h3>
 <p>Provides syntax highlighting for PTC Startup File (PSF) used by Creo Parametric.</p>
-<h3 id="pro-table-editor">pro-table-editor</h3>
+<h3 id="pro-table-under-development">pro-table  (Under Development)</h3>
 <p>Provides syntax highlighting for PRO/Table used by Creo Parametric.</p>
-<h3 id="pro-hole-table-editor">pro-hole-table-editor</h3>
+<h3 id="pro-hole-table-under-development">pro-hole-table  (Under Development)</h3>
 <p>Provides syntax highlighting for hole table files used by Creo Parametric.</p>
 <h2 id="roadmap">Roadmap</h2>
 <p>Future development as needed.</p>
