--- a/README.html
+++ b/README.html
@@ -411,35 +411,39 @@ code {
 </head>
 
 <body>
-    <h1 id="proeditor---visual-studio-code-extension">PRO/Editor - Visual Studio Code Extension</h1>
-<h2 id="description">Description</h2>
-<h2 id="software-version-compatibility">Software Version Compatibility</h2>
+    <h1 id="proeditor---visual-studio-code-extension"><strong>PRO/Editor - Visual Studio Code Extension</strong></h1>
+<h2 id="description"><strong>Description</strong></h2>
+<h2 id="software-version-compatibility"><strong>Software Version Compatibility</strong></h2>
 <p>The language visualization formatters support Creo Parametric up to v8.0.3.0</p>
-<h2 id="usage">Usage</h2>
+<h2 id="usage"><strong>Usage</strong></h2>
 <h3 id="pro-editor">pro-editor</h3>
 <p>Provides syntax highlighting for configuration files, config.(pro|sup), used by Creo Parametric.</p>
 <h3 id="pro-relations">pro-relations</h3>
 <p>Provides syntax highlighting for PRO/Relations used in Creo Parametric.</p>
 <h3 id="pro-program-under-development">pro-program (Under Development)</h3>
 <p>Provides syntax highlighting for PRO/Program used in Creo Parametric.</p>
-<h3 id="pro-modchk-under-development">pro-modchk  (Under Development)</h3>
+<h3 id="pro-modelcheck-under-development">pro-modelcheck (Under Development)</h3>
 <p>Provides syntax highlighting for MODELCheck used by Creo Parametric.</p>
-<h3 id="pro-psf-under-development">pro-psf  (Under Development)</h3>
+<h3 id="pro-psf">pro-psf</h3>
 <p>Provides syntax highlighting for PTC Startup File (PSF) used by Creo Parametric.</p>
-<h3 id="pro-table-under-development">pro-table  (Under Development)</h3>
+<h3 id="pro-table-under-development">pro-table (Under Development)</h3>
 <p>Provides syntax highlighting for PRO/Table used by Creo Parametric.</p>
-<h3 id="pro-hole-table-under-development">pro-hole-table  (Under Development)</h3>
-<p>Provides syntax highlighting for hole table files used by Creo Parametric.</p>
-<h2 id="roadmap">Roadmap</h2>
+<h3 id="pro-hole-chart-under-development">pro-hole-chart (Under Development)</h3>
+<p>Provides syntax highlighting for hole chart files used by Creo Parametric.</p>
+<h2 id="roadmap"><strong>Roadmap</strong></h2>
 <p>Future development as needed.</p>
-<h2 id="support">Support</h2>
-<h2 id="authors">Authors</h2>
+<h2 id="support"><strong>Support</strong></h2>
+<h2 id="authors"><strong>Author(s)</strong></h2>
 <p>Aniceto Moreno Jr, <a href="mailto:amorenojr@outlook.com">amorenojr@outlook.com</a>, <a href="https://github.com/amorenojr/">github.com/amorenojr</a></p>
-<h2 id="contributors">Contributors</h2>
+<h2 id="contributors"><strong>Contributors</strong></h2>
 <p>None.</p>
-<h2 id="license">License</h2>
+<h2 id="license"><strong>License</strong></h2>
 <p>MIT License</p>
-
+<h2 id="project-status"><strong>Project Status</strong></h2>
+<p><span style="color:red; font-size: large;"><strong>In Development</strong></span></p>
+<!-- <span style="color:orange; font-size: large;">**In Testing**</span>
+<span style="color:green; font-size: large;">**Released**</span>
+<span style="color:red; background:black; font-size: large;">**Obsolete**</span> -->
 </body>
 
 </html>
