--- a/README.html
+++ b/README.html
@@ -413,24 +413,30 @@ code {
 <body>
     <h1 id="proeditor---visual-studio-code-extension"><strong>PRO/Editor - Visual Studio Code Extension</strong></h1>
 <h2 id="description"><strong>Description</strong></h2>
+<p>This project provides language visualization formatting support for Creo Parametric configuration and algorithm syntax to help when writing content.</p>
 <h2 id="software-version-compatibility"><strong>Software Version Compatibility</strong></h2>
 <p>The language visualization formatters support Creo Parametric up to v8.0.3.0</p>
 <h2 id="usage"><strong>Usage</strong></h2>
-<h3 id="pro-editor">pro-editor</h3>
+<h3 id="pro-editor-span-style%22colororange%22in-testingspan">pro-editor (<span style="color:orange;"><strong>In Testing</strong></span>)</h3>
 <p>Provides syntax highlighting for configuration files, config.(pro|sup), used by Creo Parametric.</p>
-<h3 id="pro-relations">pro-relations</h3>
+<h3 id="pro-relations-span-style%22colororange%22in-testingspan">pro-relations (<span style="color:orange;"><strong>In Testing</strong></span>)</h3>
 <p>Provides syntax highlighting for PRO/Relations used in Creo Parametric.</p>
-<h3 id="pro-program-under-development">pro-program (Under Development)</h3>
-<p>Provides syntax highlighting for PRO/Program used in Creo Parametric.</p>
-<h3 id="pro-modelcheck-under-development">pro-modelcheck (Under Development)</h3>
-<p>Provides syntax highlighting for MODELCheck used by Creo Parametric.</p>
-<h3 id="pro-psf">pro-psf</h3>
+<!-- ### pro-program (**Not Started**)
+Provides syntax highlighting for PRO/Program used in Creo Parametric. -->
+<!-- ### pro-modelcheck (**Not Started**)
+Provides syntax highlighting for MODELCheck used by Creo Parametric. -->
+<h3 id="pro-psf-span-style%22colorred%22in-developmentspan">pro-psf (<span style="color:red;"><strong>In Development</strong></span>)</h3>
 <p>Provides syntax highlighting for PTC Startup File (PSF) used by Creo Parametric.</p>
-<h3 id="pro-table-under-development">pro-table (Under Development)</h3>
-<p>Provides syntax highlighting for PRO/Table used by Creo Parametric.</p>
-<h3 id="pro-hole-chart-under-development">pro-hole-chart (Under Development)</h3>
+<!-- ### pro-table (**Not Started**)
+Provides syntax highlighting for PRO/Table used by Creo Parametric. -->
+<h3 id="pro-hole-chart-span-style%22colorred%22in-developmentspan">pro-hole-chart (<span style="color:red;"><strong>In Development</strong></span>)</h3>
 <p>Provides syntax highlighting for hole chart files used by Creo Parametric.</p>
 <h2 id="roadmap"><strong>Roadmap</strong></h2>
+<ul>
+<li>pro-program (<strong>Not Started</strong>)</li>
+<li>pro-modelcheck (<strong>Not Started</strong>)</li>
+<li>pro-table (<strong>Not Started</strong>)</li>
+</ul>
 <p>Future development as needed.</p>
 <h2 id="support"><strong>Support</strong></h2>
 <h2 id="authors"><strong>Author(s)</strong></h2>
@@ -440,10 +446,10 @@ code {
 <h2 id="license"><strong>License</strong></h2>
 <p>MIT License</p>
 <h2 id="project-status"><strong>Project Status</strong></h2>
-<p><span style="color:red; font-size: large;"><strong>In Development</strong></span></p>
-<!-- <span style="color:orange; font-size: large;">**In Testing**</span>
-<span style="color:green; font-size: large;">**Released**</span>
-<span style="color:red; background:black; font-size: large;">**Obsolete**</span> -->
+<p><span style="color:red; font-size: large;"><strong>In Development</strong></span><br>
+<span style="color:orange; font-size: large;"><strong>In Testing</strong></span></p>
+<!-- <span style="color:green; font-size: large;">**Released**</span> -->
+<!-- <span style="color:red; background:black; font-size: large;">**Obsolete**</span> -->
 </body>
 
 </html>
