--- a/README.html
+++ b/README.html
@@ -474,7 +474,7 @@ Provides syntax highlighting for PRO/Table used by Creo Parametric. -->
 <p>Future development as needed.</p>
 <h2 id="support"><strong>Support</strong></h2>
 <h2 id="authors"><strong>Author(s)</strong></h2>
-<p>Aniceto Moreno Jr, <a href="mailto:amorenojr@outlook.com">amorenojr@outlook.com</a>, <a href="https://github.com/amorenojr/">github.com/amorenojr</a></p>
+<p>Aniceto Moreno Jr, <a href="https://github.com/amorenojr/">github.com/amorenojr</a></p>
 <h2 id="contributors"><strong>Contributors</strong></h2>
 <p>None.</p>
 <h2 id="license"><strong>License</strong></h2>
