Updated from changes.

--- a/README.html
+++ b/README.html
@@ -461,15 +461,34 @@ Provides syntax highlighting for PRO/Program used in Creo Parametric. -->
 Provides syntax highlighting for MODELCheck used by Creo Parametric. -->
 <h3 id="pro-psf-span-style%22colorred%22in-developmentspan">pro-psf (<span style="color:red;"><strong>In Development</strong></span>)</h3>
 <p>Provides syntax highlighting for PTC Startup File (PSF) used by Creo Parametric.</p>
+<!-- ### pro-details (**Not Started**)
+Provides syntax highlighting for PRO/Table used by Creo Parametric. -->
 <!-- ### pro-table (**Not Started**)
 Provides syntax highlighting for PRO/Table used by Creo Parametric. -->
 <h3 id="pro-hole-chart-span-style%22colorred%22in-developmentspan">pro-hole-chart (<span style="color:red;"><strong>In Development</strong></span>)</h3>
 <p>Provides syntax highlighting for hole chart files used by Creo Parametric.</p>
 <h2 id="roadmap"><strong>Roadmap</strong></h2>
 <ul>
-<li>pro-program (<strong>Not Started</strong>)</li>
-<li>pro-modelcheck (<strong>Not Started</strong>)</li>
-<li>pro-table (<strong>Not Started</strong>)</li>
+<li>pro-program (<strong>Not Started</strong>)
+<ul>
+<li>Language visualization (grammar) and code snippets for PRO/Program syntax.</li>
+</ul>
+</li>
+<li>pro-modelcheck (<strong>Not Started</strong>)
+<ul>
+<li>Language visualization (grammar) and code snippets for MODELCheck syntax.</li>
+</ul>
+</li>
+<li>pro-details (<strong>Not Started</strong>)
+<ul>
+<li>Language visualization (grammar) and code snippets for Detail Defaults syntax and options.</li>
+</ul>
+</li>
+<li>pro-table (<strong>Not Started</strong>)
+<ul>
+<li>Language visualization (grammar) and code snippets for PRO/Table syntax.</li>
+</ul>
+</li>
 </ul>
 <p>Future development as needed.</p>
 <h2 id="support"><strong>Support</strong></h2>
